--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-header></app-header>
-<app-grid-view [products]="products"></app-grid-view>
+<app-header [sortBy]="sortBy"></app-header>
+<app-grid-view [products]="products" [isAllProductsFetched]="isAllProductsFetched"></app-grid-view>
