--- a/src/app/grid-view/grid-view.component.scss
+++ b/src/app/grid-view/grid-view.component.scss
@@ -1,49 +1,47 @@
 .grid-view {
-    padding-top: 10px;
-    margin-bottom: 30px;
-}
+    padding-top: 20px;
+    margin: 0px 70px 50px;
+    
+    .detail {
+        margin-top: 10px;
+        color: darkmagenta;
+        font-size: small;
+        font-weight: 400;
+    }
 
-.prod-name:hover {
-    text-decoration: underline;
-}
+    .face-style {
+        text-align: center;
+        margin-bottom: 15px;
+        color: black;
+        font-weight: bold;
+    }
 
-.detail {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    font-weight: 100;
-    margin-top: 10px;
-}
-
-.price {
-    margin-bottom: -10px;
-}
-
-.prod-disp {
-    border: 1px solid lightgray;
-    align-items: center;
-    padding: 30px;
-    margin: 10PX;
-    z-index: 1;
-}
-
-.prod-disp:hover {
-    border: 1px solid #4FB68D;
-}
-
-.image {
-    max-width: 100%;
-    min-width: 90%;
-    display: block;
-    height: 175px;
-    margin: 0 auto;
-    object-fit: scale-down;
-	-webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-    opacity: 1;
-}
-
-.image:hover {
-    opacity: 0.5;
+    .remove-decor {
+        text-decoration: none;
+    }
+    
+    .price {
+        margin-bottom: -10px;
+    }
+    
+    .prod-disp {
+        border: 1px solid lightgray;
+        align-items: center;
+        padding: 30px;
+        margin: 10PX;
+        z-index: 1;
+        min-height: 170px;
+    }
+    
+    .prod-disp:hover {
+        border: 1px solid #4FB68D;
+    }
+    
+    .center-field {
+        margin: 0 auto;
+        font-weight: bold;
+        font-size: xx-large;
+        color: brown;
+        margin-top: 10px;
+    }
 }
