--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,11 +3,11 @@
     <div class="sort-class">
         <span class="sort-label">Sort By:</span>
         <button class="btn btn-outline-secondary dropdown-toggle sort-by" type="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" style="margin-top: 6px;">Relevance</button>
+            aria-haspopup="true" aria-expanded="false" style="margin-top: 6px;">{{ sortBy !== 'id' ? sortBy : 'Id' }}</button>
         <div class="dropdown-menu dropdown-menu-right" style="z-index: 9999;">
-            <a class="dropdown-item">Relevance</a>
-            <a class="dropdown-item">Price: Low to High</a>
-            <a class="dropdown-item">Price: High to Low</a>
+            <a (click)="sortProducts('size')" class="dropdown-item">Size</a>
+            <a (click)="sortProducts('price')" class="dropdown-item">Price</a>
+            <a (click)="sortProducts('id')" class="dropdown-item">Id</a>
         </div>
     </div>
 </div>
